<resources>
    <string name="app_name">Dekanat Keys</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_name">ФИО</string>
    <string name="prompt_application_name">Название</string>
    <string name="prompt_application_description">Описание</string>
    <string name="prompt_application_dublicates">Повторять</string>

    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="success_registration_message">"Регистрация прошла успешно"</string>
    <string name="success_registration_message_details">"Перейдите по ссылке из письма, отправленного на вашу почту, а после войдите в аккаунт"</string>

    <string name="email_error_message">"Не является email"</string>
    <string name="password_error_message">"Пароль должен быть длиной не менее 6 символов"</string>
    <string name="name_error_message">"ФИО должно быть от 3 до 30 символов"</string>

    <string name="action_sign_in">"Войти"</string>
    <string name="action_login_to_registration">"Регистрация"</string>
    <string name="action_registration">"Зарегистрироваться"</string>
    <string name="action_registration_to_login">"Вход"</string>
    <string name="action_create_application">Создать</string>

    <string name="SP_name">"OKOPrefs"</string>
    <string name="jwtTokenName">"jwtToken"</string>
    <string name="roleName">"role"</string>
    <string name="userId">"userId"</string>
    <string name="transfer_key_socket_message">"transfer_key_socket_message"</string>
    <string name="Api">"https://zomnbi-mozgi-kushat-iii-backend.pmc-python.ru/api/v1/"</string>
    <string name="LogTag">"OKOTag"</string>
    <string name="title_activity_registration">RegistrationActivity</string>

    <string name="title_activity_main">MainActivity</string>

    <!-- Для навигационной панели   -->
    <string name="title_profile">Профиль</string>
    <string name="title_dashboard">Расписание</string>
    <string name="title_my_application">Мои заявки</string>
    <string name="title_user_fragments">Пользователи</string>
    <string name="title_notification_fragments">Уведомления о заявках</string>
    <string name="title_create_application">Создать заявку</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>