<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.liid.dekanatkeys.activities.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard"/>

    <fragment
        android:id="@+id/navigation_my_application"
        android:name="com.liid.dekanatkeys.activities.ui.myApplication.MyApplicationFragment"
        android:label="@string/title_my_application"
        tools:layout="@layout/fragment_my_application" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.liid.dekanatkeys.activities.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />


</navigation>