<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/white"
    tools:context=".activities.RegistrationActivity">

    <!--    <com.liid.dekanatkeys.views.OKOEditText-->
<!--        android:id="@+id/email"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="96dp"-->
<!--        android:autofillHints="@string/prompt_email"-->
<!--        android:hint="@string/prompt_email"-->
<!--        android:inputType="textEmailAddress"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <com.liid.dekanatkeys.views.OKOEditText-->
<!--        android:id="@+id/password"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:autofillHints="@string/prompt_password"-->
<!--        android:hint="@string/prompt_password"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="textPassword"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/email" />-->

<!--    <com.liid.dekanatkeys.views.OKOEditText-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="35dp"-->
<!--        android:autofillHints="@string/prompt_name"-->
<!--        android:hint="@string/prompt_name"-->
<!--        android:imeOptions="actionDone"-->
<!--        android:inputType="textPassword"-->
<!--        android:selectAllOnFocus="true"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password" />-->

<!--    <com.liid.dekanatkeys.views.OKOButton-->
<!--        android:id="@+id/registrationButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="start"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginBottom="64dp"-->
<!--        android:enabled="true"-->
<!--        android:text="@string/action_registration"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/password"-->
<!--        app:layout_constraintVertical_bias="0.2" />-->

<!--    <com.liid.dekanatkeys.views.OKOButton-->
<!--        android:id="@+id/loginButton"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="24dp"-->
<!--        android:text="@string/action_registration_to_login"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.504"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/registrationButton" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.liid.dekanatkeys.views.OKOEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_email"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/emailErrorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/red"
            android:text="@string/email_error_message"
            android:visibility="invisible"
            />

        <com.liid.dekanatkeys.views.OKOEditText
            android:id="@+id/password"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/passwordErrorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/red"
            android:text="@string/password_error_message"
            android:scaleY="0.5"
            android:visibility="visible"
            />

        <com.liid.dekanatkeys.views.OKOEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints="@string/prompt_name"
            android:hint="@string/prompt_name"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/nameErrorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/red"
            android:text="@string/name_error_message"
            android:visibility="invisible"
            />


        <com.liid.dekanatkeys.views.OKOButton
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_registration"
            android:enabled="false"
            android:textSize="20sp" />

        <com.liid.dekanatkeys.views.OKOButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/action_registration_to_login"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Регистрация"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>